tests/compile-fail/fixed_rng_no_construction.stderr
error[E0599]: no function or associated item named `new` found for struct `FixedRng<N>` in the current scope
  --> tests/compile-fail/fixed_rng_no_construction.rs:11:32
   |
11 |     let _bad = FixedRng::<32>::new([0u8; 32]);
   |                                ^^^ function or associated item not found in `FixedRng<32>`
   |
note: if you're trying to build a new `FixedRng<32>` consider using one of the following associated functions:
      FixedRng::<N>::generate
      FixedRng::<N>::try_generate
  --> src/random/fixed_rng.rs
   |
   |     pub fn generate() -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
...
   |     pub fn try_generate() -> Result<Self, OsError> {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `FixedRng<32>: From<[u8; 32]>` is not satisfied
  --> tests/compile-fail/fixed_rng_no_construction.rs:14:41
   |
14 |     let _bad2: FixedRng<32> = [0u8; 32].into();
   |                                         ^^^^ the trait `From<[u8; 32]>` is not implemented for `FixedRng<32>`
   |
   = note: required for `[u8; 32]` to implement `Into<FixedRng<32>>`

error[E0308]: mismatched types
  --> tests/compile-fail/fixed_rng_no_construction.rs:17:38
   |
17 |     let _bad3 = FixedRng::<32>::from([0u8; 32]);
   |                 -------------------- ^^^^^^^^^ expected `FixedRng<32>`, found `[u8; 32]`
   |                 |
   |                 arguments to this function are incorrect
   |
   = note: expected struct `FixedRng<32>`
               found array `[u8; 32]`
note: associated function defined here
  --> $RUST/core/src/convert/mod.rs
   |
   |     fn from(value: T) -> Self;
   |        ^^^^
